--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin",
+  "name": "Electric Auto",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-slick": "^0.25.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "universal-cookie": "^4.0.3"
