--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-id-swiper": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-slick": "^0.25.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "swiper": "^5.3.7",
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
@@ -61,6 +62,7 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   },
