--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config='webpack.dev.js'",
     "prod": "NODE_ENV='production' webpack -p --config='webpack.prod.js'",
+    "ssr": " NODE_ENV='production' ./node_modules/webpack/bin/webpack.js --config webpack.prod.js &&   NODE_ENV='production' ./node_modules/webpack/bin/webpack.js --config webpack.server.js && node build/server.js",
     "lint:ts": "tslint 'src/**/*.{ts,tsx,js}' --fix",
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
@@ -18,9 +19,12 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.3",
     "react-id-swiper": "^3.0.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
@@ -36,6 +40,7 @@
     "@types/react-hot-loader": "^4.1.1",
     "@types/react-loadable": "^5.5.3",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.4",
     "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -46,9 +51,12 @@
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^4.2.0",
     "husky": "^4.2.5",
+    "ignore-loader": "^0.1.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "mobile-detect": "^1.4.4",
     "node-sass": "^4.13.1",
     "prettier": "^2.0.4",
+    "react-helmet": "^6.0.0",
     "react-hot-loader": "^4.12.20",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
@@ -64,7 +72,9 @@
     "webpack": "^4.42.1",
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-stats-plugin": "^0.3.1"
   },
   "husky": {
     "hooks": {
